# mcp-snowflake-service

./: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  smithery.yaml
